Rename bib file.

--- a/main.tex
+++ b/main.tex
@@ -169,7 +169,7 @@ To complement this, we propose a benchmark for which we argue that computing cor
 \input{conclusion}
 
 
-\bibliography{references}
+\bibliography{main}
 \newpage
 \appendix
 \input{appendix_distortions}
